--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Simple TypeScript page</title>
     <!-- <script src="dist/app.js" defer></script> -->
     <script src="dist/button.js" defer></script>
+    <script src="dist/interface.js" defer></script>
   </head>
   <body>
     <!-- <input type="number" id="num1" placeholder="Number 1" />
